--- a/src/app/components/main/dashboard/dashboard.scss
+++ b/src/app/components/main/dashboard/dashboard.scss
@@ -169,6 +169,9 @@
                 display: flex;
                 flex-flow: row wrap;
                 margin-top: 7px;
+                min-height: 150px;
+                max-height: 200px;
+                overflow: auto;
                 .appointment {
                     display: flex;
                     border: 1px solid #e7ecf1;
@@ -200,6 +203,12 @@
             margin-top: 0px;
             flex-grow: 1;
             flex-flow: column;
+            .message-container {
+                min-height: 300px;
+                max-height: 400px;
+                overflow: auto;
+                padding-right: 20px;
+            }
             .message {
                 display: flex;
                 padding: 30px;
