--- a/src/app/components/main/calendar/calendar.html
+++ b/src/app/components/main/calendar/calendar.html
@@ -1,11 +1,11 @@
-<md-event-calendar
+<div style="margin-bottom:30px;"><md-event-calendar
   md-events="events"
   md-event-click="eventClicked($selectedEvent)"
   md-label="title",
   md-show-create-link="true"
   md-create-event-click="eventCreate($date)"
   md-create-disabled="dis"
-  auto-height
+  auto-height="50"
   class="md-primary"
 >
   <md-event-calendar-header class="md-center">
@@ -14,3 +14,4 @@
     <md-event-calendar-next></md-event-calendar-next>
   </md-event-calendar-header>
 </md-event-calendar>
+</div>
