added missing file

--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -550,3 +550,7 @@ md-event-calendar .md-event-calendar-cell-event.book-appointment {
 		margin: 15px;
 	}
 }
+
+.md-event-calendar-cell-event-time {
+	display: none;
+}
