--- a/src/app/components/main/navigation/navigation.html
+++ b/src/app/components/main/navigation/navigation.html
@@ -1,4 +1,4 @@
-<img style="position: absolute;width: 200px;height:100%;" src="/assets/images/sidebar-background.png">
+<img style="position: absolute;width: 200px;height:100%;" ng-src="{{bgurl}}">
 <div ng-class="{navigation:true, collapsed:sideNavCollapsed}">
 	<div style="text-align: center;padding-bottom: 38px;border-bottom: 1px solid rgba(255,255,255,0.1);">
 		<img class="logo" src="/assets/images/white-logo.png" alt="">		
