--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -286,21 +286,23 @@
         </footer>
 
     </div>
-    <div layout="column" class="rightSide" ng-if="isBroker" flex style="background: url(../../../../assets/images/broker-dashboard-background.png) no-repeat; background-color: #47ada4; overflow: scroll;">
-        <md-event-calendar>
+    <div layout="column" class="rightSide" ng-if="isBroker" flex>
+    <!--  style="background: url(../../../../assets/images/broker-dashboard-background.png) no-repeat; background-color: #47ada4; overflow: scroll;"> -->
+        <img style="position: absolute;width: 300px;height:100%; z-index: 0;" ng-src="{{vm.bgurl}}">
+        <md-event-calendar style="z-index: 3;">
             <md-event-calendar-header class="md-center">
                 <md-event-calendar-prev></md-event-calendar-prev>
                 <md-event-calendar-title></md-event-calendar-title>
                 <md-event-calendar-next></md-event-calendar-next>
             </md-event-calendar-header>
         </md-event-calendar>
-        <h2 style="color: white;margin: 20px; margin-bottom: 0px;" ng-if="vm.usermessages">Messages</h2>
+        <h2 style="color: white;margin: 20px; margin-bottom: 0px; z-index: 3;" ng-if="vm.usermessages">Messages</h2>
         <span ng-repeat="msg in vm.usermessages">
             <div class="msg-requests {{msg.class}}">
                 <div>{{msg.msg}}</div>
                 <div class="datetime">{{msg.date | date:'dd MMM yy, HH:mm a'}}</div>
             </div>
         </span>
-        <input type="text" name="compose" placeholder="Add your message" class="input" style="margin: 10px; margin-left:18px; padding: 10px; border-radius: 7px;">
+        <input type="text" name="compose" placeholder="Add your message" class="input" style="margin: 10px; margin-left:18px; padding: 10px; border-radius: 7px; z-index: 3;">
     </div>
 </div>
