--- a/src/app/components/main/dashboard/dashboard.html
+++ b/src/app/components/main/dashboard/dashboard.html
@@ -119,9 +119,10 @@
 			</div>
 		</div>
 	</div>
-	<div class="right" style="min-width: 300px; background: url(../../../../assets/images/broker-dashboard-background.png) no-repeat;">
+	<div class="right">
 		<!-- <img style="position:absolute;" src="/assets/images/broker-dashboard-background.png"> -->
-		<div class="rightSide" style="max-height: 330px;">
+		<img style="position: absolute;width: 300px;min-width: 300px; height:100%; z-index: 0;" ng-src="{{vm.bgurl}}">
+		<div class="rightSide" style="max-height: 350px; z-index: 3;">
 		<md-event-calendar>
             <md-event-calendar-header class="md-center">
                 <md-event-calendar-prev></md-event-calendar-prev>
@@ -131,7 +132,7 @@
         </md-event-calendar>
         </div>
 
-		<div class="appointments">
+		<div class="appointments" style="z-index: 3;">
 			<h2 style="color:white;">Appointment Slots</h2>		
 			<div class="appointment" ng-repeat="appointment in vm.brokerAppointments">
 				<img ng-if="appointment.avatar" style="width:120px;padding-right: 20px;align-self: flex-start;" ng-src="{{message.avatar}}">
