--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -197,21 +197,30 @@
                     <div>This is regular html code</div>
                 </collapsible-item>
                 <collapsible-item item-title="Some Heading 3"> -->
-                    <div ng-repeat="partner in selectedPartners" style="min-height: 800px; height: 800px;">
-                    
-                    <img ng-src="{{partner.img}}" alt="{{partner.brokerageName}}"/>
-                    <span>{{partner.brokerageName}}</span>
-                    <img src="../../../../assets/images/calendaricon.png"/>
-                    <div style="min-height: 70vh; max-height: 70vh; height: 70vh;">
-                        <md-event-calendar md-events="vm.events" md-event-click="vm.eventClicked($selectedEvent)" md-label="title" md-show-create-link="true" md-create-event-click="vm.eventCreate($date)" md-create-disabled="dis" class="md-primary">
-                            <md-event-calendar-header class="md-center">
-                                <md-event-calendar-prev></md-event-calendar-prev>
-                                <md-event-calendar-title></md-event-calendar-title>
-                                <md-event-calendar-next></md-event-calendar-next>
-                                <!-- <md-event-calendar-today></md-event-calendar-today> -->
-                            </md-event-calendar-header>
-                        </md-event-calendar>
-                    </div>
+                    <div ng-repeat="partner in selectedPartners" style="margin-top: 30px;">
+                        <div class="partnerMenu" layout="row" flex ng-click="vm.toggleShowPartner($index)">
+                            <div flex="10"><img ng-src="{{partner.img}}" alt="{{partner.brokerageName}}" class="partnerLogoSmall" /></div>
+                            <div flex="90" class="partnerTitle">{{partner.brokerageName}}</div>
+                            <div flex="5"><img class="calicon" src="../../../../assets/images/calendaricon.png"/></div>
+                        </div>
+                        <div layout="row" flex ng-show="partner.showCalendar">
+                            <div flex="70">
+                                <md-event-calendar md-events="vm.events" md-event-click="vm.eventClicked($selectedEvent, $index)" md-label="title" md-show-create-link="true" md-create-event-click="vm.eventCreate($date)" md-create-disabled="dis" class="md-primary" style="margin-top: 2px;">
+                                    <md-event-calendar-header class="md-center">
+                                        <md-event-calendar-prev></md-event-calendar-prev>
+                                        <md-event-calendar-title></md-event-calendar-title>
+                                        <md-event-calendar-next></md-event-calendar-next>
+                                    </md-event-calendar-header>
+                                </md-event-calendar>
+                            </div>
+                            <div flex="30" class="meetingDetails">
+                                <div class="meetingDetailsHeading">Meeting Details</div>
+                                <div class="meetingDetailsContent" layout="row" flex ng-repeat="slot in selectedPartners[$index]['selectedAppointments']">
+                                    <div flex="10"><img src="../../../../assets/images/clockicon.png" width="24" /></div>
+                                    <div flex="90" class="timings">Time slot - {{slot| date:'medium'}}</div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 <!-- </collapsible-item>
                 </ang-accordion>
@@ -261,7 +270,7 @@
         <footer>
             <div layout="row" class="footerBtns" layout-align="start center" ng-if="!isBroker">
                 <md-button class="md-raised md-back" ng-click="vm.backStep()" ng-show="vm.activeStep>1">Back</md-button>
-                <md-button ng-if="!isBroker" class="md-raised md-success" ng-click="vm.nextStep()" ng-disabled="(vm.activeStep==5 && !vm.timeslotSelected) || (vm.activeStep==1 && selectedPartners.size==0)">
+                <md-button ng-if="!isBroker" class="md-raised md-success" ng-click="vm.nextStep()" ng-disabled="(vm.activeStep==5 && !vm.timeslotSelected) || (vm.activeStep==1 && selectedPartners.length==0)">
                     <span ng-show="vm.activeStep<5">Next</span>
                     <span ng-show="vm.activeStep==5">Submit</span>
                 </md-button>
