--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -602,3 +602,46 @@ md-event-calendar .md-event-calendar-cell-event.book-appointment {
 .md-event-calendar-cell-event-time {
 	display: none;
 }
+
+.partnerMenu {
+	border: 1px solid #e7ecf1;
+	margin: 30px;
+	cursor: pointer;
+	margin-bottom: 0px;
+	outline: none;
+	margin-top: -25px;
+	.partnerLogoSmall {
+		max-width:100px;
+		padding: 5px;
+		max-height: 40px;
+		float: left;
+	}
+	.partnerTitle {
+		float:left;
+		font-size: 16px;
+		padding: 15px;
+		line-height: 20px;
+		border-left: 1px solid #e7ecf1;
+		border-right: 1px solid #e7ecf1;
+	}
+	.calicon {
+		width:24px;
+		margin: 12px;
+	}
+}
+.meetingDetails{
+	margin-top: 2px;
+	margin-left: -27px;
+	border: solid 1px #e7ecf1;
+	margin-bottom: 30px;
+	.meetingDetailsHeading {
+		padding: 24px;
+		border-bottom: solid 1px #e7ecf1;
+		background-color: #f5f9fa;
+	}
+	.meetingDetailsContent {
+		margin: 20px;
+		.timings {
+		}
+	}
+}
